htmlに表示させて、Netlifyでホスティングするところまで

--- a/public/index.html
+++ b/public/index.html
@@ -13,35 +13,7 @@
   
   
 
-<div class="js-target">
-  <h1>Laravel Mix Boilerplate for Static Site</h1>
-  <ul>
-    <li class="gif">
-      <img src="/assets/images/sample.gif" alt="SAMPLE.GIF">
-    </li>
-    <li class="jpeg">
-      <img src="/assets/images/sample.jpeg" alt="SAMPLE.JPEG">
-    </li>
-    <li class="jpg">
-      <img src="/assets/images/sample.jpg" alt="SAMPLE.JPG">
-    </li>
-    <li class="png">
-      <img src="/assets/images/sample.png" alt="SAMPLE.PNG">
-    </li>
-    <li class="svg-a">
-      <svg>
-        <title>SAMPLE-A.SVG</title>
-        <use xlink:href="/assets/svg/sprite.svg#sprite-sample-a"></use>
-      </svg>
-    </li>
-    <li class="svg-b">
-      <svg>
-        <title>SAMPLE-B.SVG</title>
-        <use xlink:href="/assets/svg/sprite.svg#sprite-sample-b"></use>
-      </svg>
-    </li>
-  </ul>
-</div>
+<div class="js-target"></div>
 
   <script src="/assets/js/app.js"></script>
 </body>
